--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "@cafeswap-libs/cafe-swap-core",
-  "description": "🎛 Core contracts for the cafeswap protocol",
-  "version": "1.0.1",
-  "homepage": "https://cafeswap.finance/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/CafeSwap/cafe-swap-core.git"
-  },
-  "publishConfig": {
-    "registry": "http://registry.npmjs.org"
-  },
-  "files": [
-    "contracts",
-    "build"
-  ],
+  "name": "cafeswap-peripheral",
+  "version": "1.1.0-beta.0",
+  "description": "🎚 Peripheral smart contracts for interacting with cafeswap",
   "engines": {
     "node": ">=10"
+  },
+  "homepage": "https://cafeswap.finance",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CafeSwap/cafe-swap-periphery.git"
+  },
+  "files": [
+    "build",
+    "contracts"
+  ],
+  "dependencies": {
+    "truffle-hdwallet-provider": "^1.0.17",
+    "truffle-plugin-verify": "^0.4.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.6",
@@ -24,10 +25,10 @@
     "ethereum-waffle": "^2.4.1",
     "ethereumjs-util": "^6.2.0",
     "mocha": "^6.2.2",
+    "ncp": "^2.0.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
-    "solc": "0.5.16",
-    "truffle-plugin-verify": "^0.4.0",
+    "solc": "0.6.6",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.3"
   },
@@ -35,8 +36,10 @@
     "lint": "yarn prettier ./test/*.ts --check",
     "lint:fix": "yarn prettier ./test/*.ts --write",
     "clean": "rimraf ./build/",
+    "copy-v1-artifacts": "ncp ./buildV1 ./build",
     "precompile": "yarn clean",
     "compile": "waffle .waffle.json",
+    "postcompile": "yarn copy-v1-artifacts",
     "pretest": "yarn compile",
     "test": "mocha",
     "prepublishOnly": "yarn test"
